# personal-dashboard

./: .dockerignore  .env  .env.example  .gitignore  .pnpmrc  .vercelignore  1.md  2.md  CLAUDE.md  README.md  aa.txt  deploy.sh  dev.bat  dev.sh  docker-compose.prod.yml  docker-compose.yml  docker.env.example  improve.md  package.json  pnpm-lock.yaml  pyproject.toml  test_flashcards.py  turbo.json  vercel.json
.claude/: settings.local.json
api/: Dockerfile  index.py  main.py  pyproject.toml  requirements.txt  reset_db.py
api/app/: database.py  main.py
api/app/auth/: __init__.py  utils.py
api/app/middleware/: __init__.py  cache.py
api/app/models/: __init__.py  command.py  flashcard.py  note.py  pomodoro.py  todo.py  tool.py  user.py
api/app/routers/: __init__.py  auth.py  commands.py  flashcards.py  notes.py  pomodoro.py  todos.py  tools.py
api/app/services/: spaced_repetition.py
frontend/: Dockerfile  README.md  next.config.js  package-npm.json  package.json  tsconfig.json
frontend/src/api/: auth.ts  commands.ts  flashcards.ts  notes.ts  pomodoro.ts  todos.ts  tools.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: AuthGuard.tsx  BottomNav.tsx  CommandForm.tsx  CommandItem.tsx  CommandList.tsx  CommandPalette.tsx  CommandStats.tsx  CopyButton.tsx  CopyableText.tsx  CreateTodoForm.tsx  FlashcardForm.tsx  FlashcardItem.tsx  FlashcardList.tsx  FlashcardReview.tsx  FlashcardStats.tsx  Navigation.tsx  NoteForm.tsx  NoteItem.tsx  NoteList.tsx  PaletteGenerator.tsx  PomodoroStats.tsx  PomodoroTimer.tsx  TodoItem.tsx  (+4 more)
nginx/: nginx.conf
(+26 files in other folders)
